# Structures

./: CMakeLists.txt
Complex/: CMakeLists.txt  Complex.cpp
prj.lab/: CMakeLists.txt
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/dynarray/: CMakeLists.txt  dynarray.cpp  dynarray.h
prj.lab/dynarrayt/: CMakeLists.txt  dynarrayt.cpp  dynarrayt.h
prj.lab/long_int/: CMakeLists.txt  long_int.cpp  long_int.h
prj.lab/longint/: CMakeLists.txt  longint.cpp  longint.h
prj.lab/matrixa/: CMakeLists.txt  matrixa.cpp  matrixa.h
prj.lab/matrixl/: CMakeLists.txt  matrixl.cpp  matrixl.h
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.h
prj.lab/queuel/: CMakeLists.txt  queuel.cpp  queuel.h
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/stacka/: CMakeLists.txt  stacka.cpp  stacka.h
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.h
prj.labs/: CMakeLists.txt
prj.labs/complex/: CMakeLists.txt  complex.cpp  complex.h  test_complex.cpp
prj.labs/rational/: CMakeLists.txt  Rational.cpp  Rational.h  Test_Rational.cpp  rational.cpp  test_rational.cpp
prj.test/: CMakeLists.txt
prj.test/catch2_complex/: catch2_complex.cpp
prj.test/catch2_dynarray/: catch2_dynarray.cpp
prj.test/catch2_matrixa/: catch2_matrixa.cpp
prj.test/catch2_rational/: catch2_rational.cpp
prj.test/catch2_stackl/: catch2_stackl.cpp
prj.test/test_complex/: test_complex.cpp
prj.test/test_long_int/: CMakeLists.txt  test_long_int.cpp
prj.test/test_longint/: CMakeLists.txt  test_longint.cpp
prj.test/test_rational/: test_rational.cpp
(+1 files in other folders)
