cmake_minimum_required (VERSION 3.8)

add_subdirectory (complex)
add_subdirectory (rational)
add_subdirectory (longint)
add_subdirectory (matrixl)
add_subdirectory (matrixa)
add_subdirectory (queuea)
add_subdirectory (queuel)
add_subdirectory (stackl)
add_subdirectory (stacka)
add_subdirectory (dynarray)
add_subdirectory (dynarrayt)